# Ry-Stats-Lib

./: .gitignore  CODE_OF_CONDUCT.md  Licence.txt  README.md  RyAPI.py  core.py  main.py  pyproject.toml
Ry/: __init__.py  core.py
Ry/Data/: metals.csv
Ry/Modules/: Access.py  CoreStructures.py  IOLayer.py  MathBasic.py
Ry/Modules/Tests/: test_mathbasics.py
Ry/Modules/utils/: typing_helpers.py
